--- a/src/app/auth/cadastro/cadastro.component.html
+++ b/src/app/auth/cadastro/cadastro.component.html
@@ -3,16 +3,16 @@
     <div class="card-title"></div>
 
     <form>
-      <div class="form-group mt-2">
+      <div class="mt-2">
         <input type="email" class="form-control" placeholder="E-mail">
       </div>
-      <div class="form-group mt-2">
+      <div class="mt-2">
         <input type="text" class="form-control" placeholder="Nome completo">
       </div>
-      <div class="form-group mt-2">
+      <div class="mt-2">
         <input type="text" class="form-control" placeholder="Nome de usuário">
       </div>
-      <div class="form-group mt-2">
+      <div class="mt-2">
         <input type="password" class="form-control" placeholder="Senha">
       </div>
       <div class="d-grid mt-2">
@@ -28,7 +28,7 @@
 <div class="card mt-4">
   <div class="card-body">
     <p class="card-text">
-      Tem uma conta? <a href="#" class="card-link">Faça login</a>
+      Tem uma conta? <a href="#" (click)="exibirPainelLogin()" class="card-link">Faça login</a>
     </p>
   </div>
 </div>
