--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,10 +3,10 @@
     <div class="card-title"></div>
 
     <form>
-      <div class="form-group mt-2">
+      <div class="mt-2">
         <input type="email" class="form-control" placeholder="E-mail">
       </div>
-      <div class="form-group mt-2">
+      <div class="mt-2">
         <input type="password" class="form-control" placeholder="Senha">
       </div>
       <div class="d-grid mt-2">
@@ -23,7 +23,7 @@
 <div class="card mt-4">
   <div class="card-body">
     <p class="card-text">
-      Não tem uma conta? <a href="#" class="card-link">Cadastre-se</a>
+      Não tem uma conta? <a href="#" (click)="exibirPainelCadastro()" class="card-link">Cadastre-se</a>
     </p>
   </div>
 </div>
