--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,5 +1,5 @@
 .card-title {
-    background-image: url("/assets/logo-instagram.png");
+    background-image: url("/assets/logo.png");
     background-position: center;
     background-repeat: no-repeat;
     height: 60px;
