--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="bg-light position-absolute min-vh-100 w-100 pt-5">
-  <app-auth></app-auth>
+<div class="bg-light position-absolute min-vh-100 w-100">
+  <router-outlet></router-outlet>
 </div>
