aviso de erro de login

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -14,9 +14,10 @@
       </div>
     </form>
 
-    <hr>
-
-    <p class="small text-danger text-center">O nome de usuário inserido não pertence a uma conta. Verifique seu nome de usuário e tente novamente.</p>
+    <div *ngIf="error !== undefined">
+      <hr>
+      <p class="small text-danger text-center">{{ error }}</p>
+    </div>
 
   </div>
 </div>
