--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
       <a class="text-end mx-auto" href="#">
         <img alt="Incluir" src="assets/camera.png" class="btn-incluir h-50 img-fluid" id="btn_incluir">						
       </a>
-      <a href="#" (click)="logOut()">Sair</a>
+      <a href="#" (click)="logOut()" class="mx-3 text-decoration-none text-danger">Sair</a>
     </div>
   </div>
 </nav>
