--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row justify-content-center align-items-center">
+  <div class="row justify-content-center align-items-center mt-5">
     <div class="d-none d-xl-block col-4" [@animacao-banner]="estadoBanner">
       <app-banner></app-banner>
     </div>
