--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="col-md-4 col-2 ml-auto me-0 text-end">
-      <a class="text-end mx-auto" href="#">
+      <a class="text-end mx-auto" href="#" data-bs-toggle="modal" data-bs-target="#modalIncluir">
         <img alt="Incluir" src="assets/camera.png" class="btn-incluir h-50 img-fluid" id="btn_incluir">						
       </a>
       <a href="#" (click)="logOut()" class="mx-3 text-decoration-none text-danger">Sair</a>
@@ -15,5 +15,5 @@
 </nav>
 
 <div class="container">
-  <app-publicacoes></app-publicacoes>   
+  <app-publicacoes></app-publicacoes>
 </div>
