--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -3,11 +3,10 @@
     border-bottom: solid 1px #E6E6E6;
 }
 
-.logo {
-    background-image: url('/assets/logo-2.png');
-    width: 110px;
-    height: 36px;
-    float: left;
+.img-logo {
+    &:hover {
+        filter: opacity(0.8);
+    }
 }
 
 .add-post {
