--- a/src/app/home/publicacoes/publicacoes.component.html
+++ b/src/app/home/publicacoes/publicacoes.component.html
@@ -4,10 +4,10 @@
       <div class="card-body">
         <p class="card-text"><strong>{{publicacao.nome_usuario}}</strong></p>
       </div>
-      <img class="card-img" [src]="publicacao.url_imagem">
+      <img class="card-img" [src]="publicacao.url_imagem || ''">
       <div class="card-body">
         <p class="card-text">
-          <strong>{{publicacao.nome_usuario}}</strong> {{publicacao.titulo}}!
+          <strong>{{publicacao.nome_usuario}}</strong> {{publicacao.titulo}}
         </p>
         <hr>
         <input type="text" class="form-control comentario" placeholder="Adicione um comentário..." />
